--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,8 @@ jobs:
     steps:
       - checkout
       - run: go version
-      - run: go get -u ./
+      - run: pwd
+      - run: go get -u ./..
       - run: go test -v
 
 # Invoke jobs via workflows
